Finished the initial chat interface and added necessary files

--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,11 @@
     <div id="panel-bienvenida">
         <h2>Practica de evaluacion usando Sockets de comunicacion - Ismael Antonio Gonzalez 703</h2>
         <input id="persona" type="text" placeholder="Ingresa tu nombre">
-        <button id="ingresar">Ingresar al chat</button>
+        <button id="ingresar">Ingresar al chat compañero del 703</button>
     </div>
 
     <div id="app-chat" style="display:none;">
-        <h2>Practica de evaluacion 1er parcial - Ismael Antonio Gonzalez 703</h2>
+        <h2>Practica de evaluacion 1er parcial - Ismael Antonio Gonzalez </h2>
         <h3 id="clase">Ismael antonio 703" (chat con socket)</h3>
         <div id="ventana-mensajes">
             <div id="output"></div>
