--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div id="app-chat" style="display:none;">
-        <h2>Practica de evaluacion 1er parcial - Ismael Antonio Gonzalez </h2>
+        <h2>Practica de evaluacion 1er parcial</h2>
         <h3 id="clase">Ismael antonio 703" (chat con socket)</h3>
         <div id="ventana-mensajes">
             <div id="output"></div>
